fix preloader overflow

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -80,9 +80,11 @@
 .sk-circle-wrapper{
   width: 100%;
   height: 100%;
-  position: absolute;
-  left: 0;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background: var(--theme-bg-color);
   display: flex;
   justify-content: center;
@@ -671,7 +673,7 @@ body {
   padding: 0 90px;
   margin: 0px auto auto;
   gap: 80px;
-  background: red;
+  background: #4a4dfb;
 
 }
 
@@ -714,6 +716,92 @@ body {
 }
 
 
+/*--------------------------------------------------------------
+# Resume Section
+--------------------------------------------------------------*/
+#resume {
+  max-width: 1440px;
+  height: 700px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 0 90px;
+  margin: 0px auto auto;
+}
+
+#resume .title-section{
+  font-size: 40px;
+  display: inline-block;
+  margin-top:0;
+  color: var(--heading);
+}
+
+#resume p{
+  color: var(--heading);
+  margin:0;
+  text-align: justify;
+  line-height: 1.5;
+}
+
+#resume .row{
+  padding: 0 90px;
+}
+
+#resume .resume-title {
+  font-size: 26px;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: var(--heading);
+}
+#resume .resume-item {
+  padding: 0 0 20px 20px;
+  margin-top: -2px;
+  border-left: 2px solid var(--light-blue);
+  position: relative;
+}
+
+
+
+#resume .resume-item h4 {
+  line-height: 18px;
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 10px;
+}
+#resume .resume-item h5 {
+  font-size: 16px;
+  background: #f7f8f9;
+  padding: 5px 15px;
+  border-radius: 11px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+#resume .resume-item ul {
+  padding-left: 20px;
+}
+#resume .resume-item ul li {
+  padding-bottom: 10px;
+}
+#resume .resume-item:last-child {
+  padding-bottom: 0;
+}
+#resume .resume-item::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -10px;
+  top: 0;
+  background: var(--light-blue);
+  border: 2px solid var(--light-blue);
+}
 
 
 /*--------------------------------------------------------------
@@ -724,7 +812,6 @@ body {
   position: relative;
   margin: auto;
   padding: 65px 90px;
-  background: #4a4dfb;
 }
 
 #projects #top-section-projects{
@@ -861,8 +948,6 @@ body {
   }
 
 }
-
-
 
 /*--------------------------------------------------------------
 # Contact Section
